--- a/src/app/modules/problems/components/attempts-table/table/table.component.html
+++ b/src/app/modules/problems/components/attempts-table/table/table.component.html
@@ -158,7 +158,7 @@
         </td>
 
         <td *ngIf="!hideSourceCodeSize">
-          <div class="d-flex align-items-center text-nowrap text-dark">
+          <div class="d-flex ml-1 align-items-center text-nowrap text-dark">
             <kep-icon name="code" type="duotone"/>
             {{ attempt.sourceCodeSize }}
           </div>
