[FOOTER] move footer from landing page to global

--- a/src/app/modules/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page.component.html
@@ -7,4 +7,4 @@
 <section-faq></section-faq>
 <section-get-started></section-get-started>
 <section-contact-us></section-contact-us>
-<section-footer></section-footer>
+<!--<section-footer></section-footer>-->
