--- a/src/app/modules/landing-page/sections/section-footer/section-footer.component.scss
+++ b/src/app/modules/landing-page/sections/section-footer/section-footer.component.scss
@@ -1,12 +1,13 @@
 @import 'styles/kep-imports';
 
 .footer-container {
-  margin-left: -2rem;
-  width: calc(100% + 4rem);
+  margin-left: 0rem;
+  width: calc(100%);
   padding: 2rem 2rem;
   border-radius: 3.5rem 3.5rem 0 0;
   background-color: mix($primary, mix(white, $theme-dark-card-bg, 10), 5);
-  background-image: url('assets/landing-page/beautiful-bg-dark.png') !important;
+  background-color: white;
+  // background-image: url('assets/landing-page/beautiful-bg-2.png') !important;
 
   @include dark-layout {
     background-color: rgba(mix($primary, $theme-dark-card-bg, 5), 0.9);
