[REFACTORING] arena countdown

--- a/src/app/modules/arena/pages/arena-tournament/arena-countdown/arena-countdown.component.html
+++ b/src/app/modules/arena/pages/arena-tournament/arena-countdown/arena-countdown.component.html
@@ -8,7 +8,7 @@
       }
     </h4>
 
-    <ngx-countdown [time]="leftTime" [render]="render" format="HH:mm:ss" (finish)="refreshPage()">
+    <ngx-countdown [time]="leftTime" [render]="render" format="HH:mm:ss" (finish)="location.reload()">
       <ng-template #render let-data>
         <div class="d-flex justify-content-between">
           <div class="countdown text-center">
