[REFACTORING] add empty-result

--- a/src/app/modules/problems/pages/problems/sections/section-problems-list/section-problems-list.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-list/section-problems-list.component.html
@@ -10,6 +10,11 @@
       </div>
     }
   </div>
+  @if (problems?.length == 0) {
+    <div class="pb-2">
+      <empty-result/>
+    </div>
+  }
 }
 
 <div class="mb-2">
