--- a/src/app/modules/users/pages/user-profile/user-achievements/user-achievements.component.html
+++ b/src/app/modules/users/pages/user-profile/user-achievements/user-achievements.component.html
@@ -37,6 +37,12 @@
           </div>
         }
       </div>
+
+      @if (achievements.length == 0) {
+        <div class="text-center">
+          <empty-result [title]="''" [text]="'NoResultFound'"/>
+        </div>
+      }
     </div>
   }
 </div>
