--- a/src/app/modules/users/pages/user-profile/user-competition-prizes/user-competition-prizes.component.html
+++ b/src/app/modules/users/pages/user-profile/user-competition-prizes/user-competition-prizes.component.html
@@ -17,6 +17,11 @@
           </div>
         }
       </div>
+      @if (data.length == 0) {
+        <div class="text-center">
+          <empty-result [title]="''" [text]="'NoResultFound'"/>
+        </div>
+      }
     </div>
   }
 </div>
