--- a/src/app/styles/colors/contests.scss
+++ b/src/app/styles/colors/contests.scss
@@ -266,7 +266,7 @@ $sql-color: #dc7433;
     background: var(--bg) !important;
   }
 
-  .btn {
+  .btn:not(:is(.attempt-id)) {
     background-color: var(--bg) !important;
     border: 1px var(--bg-gradient) !important;
     box-shadow: var(--box-shadow) !important;
