--- a/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
+++ b/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
@@ -102,7 +102,7 @@
                   </div>
 
                   <div class="text-center mt-2">
-                    <button (click)="reloadPage()" class="btn btn-primary btn-block btn-sm">
+                    <button (click)="filterApply()" class="btn btn-primary btn-block btn-sm">
                       {{ 'APPLY' | translate }}
                     </button>
                   </div>
