--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.scss
@@ -1,30 +1,36 @@
+@import 'styles/kep-imports';
+
 .countdown {
-    margin-bottom: 23px;
-    width: 50px;
+  margin-bottom: 23px;
+  width: 50px;
 }
 
 .clock-count-container {
-    width: 85px;
-    height: 85px;
-    -webkit-box-shadow: 1px 2px 12px 0 rgba(31, 45, 61, 0.1);
-    box-shadow: 1px 2px 12px 0 rgba(31, 45, 61, 0.1);
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    border: 1px solid #e0e6ed;
-    margin: 0 0 12px 0;
+  width: 85px;
+  height: 85px;
+  -webkit-box-shadow: 1px 2px 12px 0 rgba(31, 45, 61, 0.1);
+  box-shadow: 1px 2px 12px 0 rgba(31, 45, 61, 0.1);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px solid #e0e6ed;
+  margin: 0 0 12px 0;
 }
 
 .clock-val {
-    font-size: 37px;
-    margin-bottom: 0;
+  font-size: 45px;
+  margin-bottom: 0;
+
+  @include media-breakpoint-down(md) {
+    font-size: 35px;
+  }
 }
 
 .clock-text {
-    white-space: nowrap;
-    font-size: 16px;
-    margin-bottom: 0;
-    margin-top: 16px;
-    font-weight: 400;
+  white-space: nowrap;
+  font-size: 16px;
+  margin-bottom: 0;
+  margin-top: 16px;
+  font-weight: 400;
 }
