--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.scss
@@ -1,97 +1,71 @@
-.card .card-header {
-  display: block;
-}
-
-th {
-  border-bottom: none !important;
-  border-top: none !important;
-}
-
-thead tr th,
-tfoot tr th {
-  font-size: 1rem;
-  font-weight: 600 !important;
-  text-transform: initial !important;
-}
-
-table>thead>tr>th:first-child {
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px;
-}
-
-table>thead>tr>th:last-child {
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
-
-th,
-td {
-  padding: 15px !important;
-}
-
-th:nth-child(1) {
-  min-width: 80px;
-}
-
-tr:first-child td,
-th {
-  border-bottom: none !important;
-  border-top: none !important;
-}
-
-th:nth-child(2) {
-  // min-width: 300px;
-  white-space: nowrap;
-}
-
-::ng-deep .rating-title-img {
-  margin-right: 5px !important;
-}
-
-::ng-deep .contest-time-sm {
-  font-size: 10px;
-}
-
-::ng-deep .less-code {
-  margin-left: 0.6rem;
-  margin-right: 0.6rem;
-}
-
-.absolute {
-  position: absolute;
-}
-
-thead tr {
-  background: var(--bg-gradient) !important;
-  box-shadow: var(--box-shadow) !important;
-  color: var(--text-color);
-}
-
-span.points {
-  background: var(--bg) !important;
-  box-shadow: var(--box-shadow) !important;
-  color: var(--text-color);
-}
-
-::ng-deep span.problem-points {
-  background: var(--bg-light) !important;
-  color: var(--bg);
-}
-
-::ng-deep span.problem-points.the-best {
-  background: var(--bg) !important;
-  box-shadow: var(--box-shadow) !important;
-  color: var(--text-color);
-}
-
-::ng-deep .tooltip-contest-problem {
-  .arrow:before {
-    border-top-color: #f3effc;
+app-contest-standings {
+  th:nth-child(2) {
+    contestant-view {
+      white-space: nowrap;
+    }
   }
 
-  .tooltip-inner {
-    color: var(--bg) !important;
-    background-color: var(--bg-light) !important;  
+  .rating-title-img {
+    margin-right: 5px !important;
+  }
+
+  .contest-time-sm {
+    font-size: 10px;
+  }
+
+  .less-code {
+    margin-left: 0.6rem;
+    margin-right: 0.6rem;
+  }
+
+  .absolute {
+    position: absolute;
+  }
+
+  thead tr {
+    background: var(--bg-gradient) !important;
+    box-shadow: var(--box-shadow) !important;
+    color: var(--text-color);
+  }
+
+  span.points {
+    background: var(--bg) !important;
+    box-shadow: var(--box-shadow) !important;
+    color: var(--text-color);
+  }
+
+  span.problem-points {
+    background: var(--bg-light) !important;
+    color: var(--bg);
+  }
+
+  span.problem-points.the-best {
+    background: var(--bg) !important;
+    box-shadow: var(--box-shadow) !important;
+    color: var(--text-color);
+  }
+
+  .tooltip-contest-problem {
+    .arrow:before {
+      border-top-color: #f3effc;
+    }
+
+    .tooltip-inner {
+      color: var(--bg) !important;
+      background-color: var(--bg-light) !important;
+    }
+  }
+
+  th, td {
+    padding: 15px !important;
+  }
+
+  th:nth-child(1) {
+    min-width: 80px;
+  }
+
+  th {
+    border-bottom: none !important;
+    border-top: none !important;
   }
 }
-
