--- a/src/app/modules/problems/components/problem-body/problem-body.component.scss
+++ b/src/app/modules/problems/components/problem-body/problem-body.component.scss
@@ -3,10 +3,7 @@
   border-top: none !important;
   border-right: none !important;
   border-left: none !important;
-  border-top-left-radius: 10px !important;
-  border-top-right-radius: 10px !important;
-  border-bottom-left-radius: 10px !important;
-  border-bottom-right-radius: 10px !important;
+  border-radius: 10px;
 }
 
 textarea {
@@ -49,8 +46,4 @@ code {
 
 .dark-layout pre code {
   color: white !important;
-}
-
-::ng-deep problem-body img {
-  width: 50% !important;
 }
