[UPDATE] kep-table | add hover effect

--- a/src/app/shared/components/kep-table/kep-table.component.scss
+++ b/src/app/shared/components/kep-table/kep-table.component.scss
@@ -1,3 +1,5 @@
+@import 'styles/kep-imports';
+
 kep-table {
   .empty {
     position: relative;
@@ -7,5 +9,9 @@ kep-table {
       position: absolute;
       left: calc(50% - 120px);
     }
+  }
+
+  tr:hover {
+    background-color: rgba($primary, 0.1) !important;
   }
 }
