--- a/src/app/modules/problems/components/problem-body/problem1639/problem1639.component.scss
+++ b/src/app/modules/problems/components/problem-body/problem1639/problem1639.component.scss
@@ -1,3 +1,5 @@
+@import 'styles/kep-imports';
+
 .countdown {
   margin-bottom: 23px;
   width: 50px;
@@ -18,7 +20,7 @@
 
 .clock-val {
   color: #fff;
-  font-size: 40px;
+  font-size: 35px;
   margin-bottom: 0;
 }
 
@@ -46,7 +48,7 @@
 }
 
 .container {
-  background: linear-gradient(-45deg, #463caa, #7367f0, #8a80f3, rgba(115, 103, 240, 0.7));
+  background: linear-gradient(to right, $primary, mix(white, $primary, 20));
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   padding-top: 1rem;
