[ADD] problem-1953 component

--- a/src/app/modules/problems/components/problem-body/problem-body.component.html
+++ b/src/app/modules/problems/components/problem-body/problem-body.component.html
@@ -97,6 +97,9 @@
 @if (problem.id == 1905) {
   <problem1905></problem1905>
 }
+@if (problem.id == 1953) {
+  <problem1953></problem1953>
+}
 @if (problem.id == 1954) {
   <problem1954></problem1954>
 }
