[REFACTORING] course page

--- a/src/app/modules/courses/pages/course/course-lessons/lesson-card/lesson-card.component.scss
+++ b/src/app/modules/courses/pages/course/course-lessons/lesson-card/lesson-card.component.scss
@@ -47,7 +47,7 @@ lesson-card {
     width: 15em;
     font-size: 1.5em;
     color: white;
-    border-radius: 1em;
+    border-radius: 7px;
     padding: 1em;
     /*margin: 2em;*/
     display: flex;
